# tuya_penny_cc

./: .gitignore  CLAUDE.md  README.md
dbt/: dbt_project.yml  profiles.yml  requirements.txt
dbt/models/marts/: dim_devices.sql  fct_energy_daily.sql  fct_energy_hourly.sql  fct_energy_intervals.sql  schema.yml
dbt/models/staging/: schema.yml  stg_devices_latest.sql  stg_energy_daily.sql  stg_energy_dp_log.sql  stg_energy_hourly.sql
dbt/seeds/: device_relationships.csv
dbt/snapshots/: snap_devices.sql
docs/: progress.md
docs/superpowers/plans/: 2026-04-14-energy-hourly-daily.md  2026-04-14-energy-realtime.md  2026-04-14-ingestion-mvp.md  2026-04-15-plan-b3-c-dbt.md
docs/superpowers/specs/: 2026-04-14-energy-hourly-daily-design.md  2026-04-14-energy-realtime-design.md  2026-04-14-tuya-iot-design-zh-notes.md  2026-04-14-tuya-iot-design.md  (+1 more)
ingestion/: .env.example  README.md  pyproject.toml
ingestion/docs/: tuya_api_notes.md
ingestion/src/tuya_penny_cc/: __main__.py  config.py  main.py
ingestion/src/tuya_penny_cc/bq/: schemas.py  writer.py
ingestion/src/tuya_penny_cc/jobs/: device_sync.py  energy_daily.py  energy_dp_log.py  energy_hourly.py  energy_realtime.py
ingestion/src/tuya_penny_cc/tuya/: auth.py  client.py  models.py
ingestion/tests/: conftest.py
ingestion/tests/unit/: test_config.py  test_main.py
ingestion/tests/unit/bq/: test_writer.py
ingestion/tests/unit/jobs/: test_device_sync.py  test_energy_daily.py  test_energy_dp_log.py  test_energy_hourly.py  test_energy_realtime.py
ingestion/tests/unit/tuya/: test_auth.py  test_client.py
